# crossclient

./: .coverage  .gitignore  404.html  LICENSE  README.md  dev.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy_docs.yml  run_test.yml  test.yml
api/: index.html
crossclient/: __init__.py  client.py  cross_client.py  result_submission.py  token_client.py
docs/: api.md  index.md
search/: search_index.json
tests/: test_result_submission.py  test_token.py
