[project]
name = "crossclient"
version = "0.1.0"
description = "A python client to interact with the CROSS API.  "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ty>=0.0.1a25",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.16.1",
]

[tool.coverage.report]
show_missing = true
omit = [
    # exclude test folders
    "tests/*",
]
exclude_lines = [
    "pragma: no cover",
    "^\\s*pass\\s*$",            # Standalone pass statements
    "^\\s*\\.\\.\\.\\s*$",       # Standalone ellipsis
    "raise NotImplementedError", # Abstract method implementations
]

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning --tb=no --log-level=WARNING"
testpaths = ["tests"]
